[metadata]
name = lisa-api
summary = LISA Project API
description-file =
    README.rst
author = Julien Syx
author-email = julien@lisa-project.net
home-page = http://www.lisa-project.net
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    lisa_api

[compile_catalog]
directory = lisa_api/locale
domain = lisa_api

[update_catalog]
domain = sandbox
output_dir = lisa_api/locale
input_file = lisa_api/locale/lisa_api.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = lisa_api/locale/lisa_api.pot

[bdist_wheel]
universal = 1

[aliases]
release = register clean --all sdist bdist_wheel upload

[flake8]
max-line-length = 140
exclude = tests/*,*/migrations/*,*/south_migrations/*

[pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    south_migrations
    migrations
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -rxEfs
    --strict
    --ignore docs/conf.py
    --ignore setup.py
    --ignore bootstrap.py
    --doctest-modules
    --doctest-glob \*.rst
    --tb short

[isort]
force_single_line=True
line_length=120
known_first_party=lisa_api
default_section=THIRDPARTY
forced_separate=test_lisa_api

[matrix]
python_versions =
    2.6
    2.7
    3.3
    3.4
    pypy

coverage_flags =
    : true
    nocover: false

environment_variables =
    -
